<resources>
    <string name="app_name">CaféCom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="detail_heading">Web Page Detail</string>
    <string name="list_heading">Web Page Listing</string>

    <!-- Tool bar -->
    <string name="addCafeToolbar">Add Café</string>
    <string name="search_zip">Search Zipcode</string>

    <!--<string name="url">http://192.168.100.7/cdol/kaffe/</string>-->
    <!--<string name="url">http://192.168.43.239/cdol/kaffe/</string>-->
    <string name="url">http://93.202.231.175/cdol/kaffe/</string>

    <!-- API Key -->
    <string name="google_maps_key">AIzaSyDOLnS0g9WrcodhykS2Fu8GldeKC0vqbDU</string>
    <string name="facebook_app_id">1420996024637857</string>
    <string name="banner_ad_unit_id">ca-app-pub-3679734076579105/5071958971</string>

    <!-- drawer Menu -->
    <string name="viewList">View List</string>
    <string name="viewMap">Overview Map</string>
    <string name="viewBookmark">Bookmark</string>
    <string name="addCafe">Add Café</string>
    <string name="logout">Logout</string>

    <!--Cafe 테이블 명-->
    <string name="itemNo">no</string>
    <string name="itemName">name</string>
    <string name="itemAddress">address</string>
    <string name="itemLatitude">latitude</string>
    <string name="itemLongitude">longitude</string>
    <string name="itemOpeningHours">opening_hours</string>
    <string name="itemRating">rating</string>
    <string name="itemWifi">wifi</string>
    <string name="itemPower">power</string>
    <string name="itemOpenNow">open_now</string>

    <!-- comment 테이블 명 -->
    <string name="commentNo">comment_no</string>
    <string name="commentEmail">id</string>
    <string name="commentName">name</string>
    <string name="comment">comment</string>
    <string name="userRating">rating</string>
    <string name="commentDate">comment_date</string>
    <string name="cafeNo">cafe_no</string>
    <string name="userPhoto">photo</string>

    <!-- Common -->
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="loading">Loading...</string>

    <!-- CafeView Fragment -->
    <string name="open">Open Now</string>
    <string name="close">Closed</string>
    <string name="openingHours">Opening Hours</string>
    <string name="addComment">Write Comment</string>
    <string name="featuresFree">Free</string>
    <string name="featuresRestricted">Restricted</string>
    <string name="featuresPay">Pay</string>
    <string name="featuresNone">None</string>
    <string name="featuresMany">Many</string>
    <string name="featuresFew">Few</string>
    <string name="sharing">Share</string>
    <string name="needLogin">Please Login to your account</string>
    <string name="copyAddress">"Address" copied to clipboard.</string>

    <!-- CommentListView Adapter -->
    <string name="delComment">Do you want to delete this comment?</string>

    <!-- None Fragment -->
    <string name="noneText">Press</string>
    <string name="noneBtn">Refresh</string>

    <!-- Login Activity -->
    <string name="alreadyGoogle">You are already signed up with Google.</string>
    <string name="alreadyFacebook">You are already signed up with Facebook.</string>

    <!-- Main Activity -->
    <string name="closeApp">Closing</string>
    <string name="closeAppComment">Are you sure you want to close %1$s?</string>
    <string name="logoutComment">Are you sure you want to logout?</string>

    <!-- google login -->
    <string name="signed_out">signed_out</string>
    <string name="signed_in_fmt">LoginTest</string>
    <string name="title_activity_add_cafe">AddCafeActivity</string>

    <!-- Day -->
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="closed">Closed</string>

    <!-- CafeAdd Activity-->
    <string name="addCafeName">Please enter café name.</string>
    <string name="addCafeStreet">Please enter Street name.</string>
    <string name="addCafeNumber">Please enter Street number.</string>
    <string name="addCafeZipcode">Please enter zip code.</string>
    <string name="addExplanation">* It is reviewed and reflected by the administrator after registration.</string>
    <string name="addCompleted">Completed adding.</string>

</resources>
